welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:8: error: not found: value O
   for (i<-getMondeHauteur()-1 to O){
                                  ^Array2:13: error: not found: value O
   for (i<-getMondeHauteur()-1 to O){
                                  ^Array2:22: error: not found: value k
             for(i<-k to getMondeHauteur()-k+1){
                    ^Array2:28: error: not found: value k
        setCouleurBrosse(T(k-1))
                           ^