welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
var T=new Array[Color](getMondeHauteur())
for (i<-0 to getMondeHauteur()-1){
	T(i)=getCouleurSol()
	avance()
}
   for (i<-getMondeHauteur()-1 to O){
	recule()
       }
for (j<-0 to getMondeLargeur()-1){
	
   for (i<-getMondeHauteur()-1 to O){
	recule()
       }
        gauche()
        avance()
         droite()
      for (j<-1 to getMondeHauteur()){
      	
      
             for(i<-k to getMondeHauteur()-k+1){
           	setCouleurBrosse(T(i))
		   baisseBrosse()
	     	leveBrosse()
	      	avance()
	        }
        setCouleurBrosse(T(k-1))
        baisseBrosse()
		leveBrosse()
		
}
}
}